# MistralAIHackathon

./: .env.example  .gitignore  LICENSE  README.md
Canard/services/api/: .dockerignore  ARCHITECTURE.md  Dockerfile  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
Canard/services/api/app/: config.py  main.py  models.py
Canard/services/api/app/agent/: __init__.py  loop.py  memory.py  prompts.py  redaction.py  scoring.py
Canard/services/api/app/agents/: agent.py  memory.py  tools.py  types.py
Canard/services/api/app/auth/: domain.py  middleware.py
Canard/services/api/app/db/: __init__.py  client.py  queries.py
Canard/services/api/app/integrations/: elevenlabs.py  mistral.py
Canard/services/api/app/lib/: elevenlabs.py  make_call.py  mistral.py  sessions.py
Canard/services/api/app/models/: __init__.py  analysis.py  api.py  callers.py  calls.py  campaign_assignments.py  campaigns.py  employees.py  organizations.py  scripts.py  (+4 more)
Canard/services/api/migrations/: 001_initial.sql  002_seed.sql  003_add_org_domain.sql  003_boss_hierarchy.sql  004_employee_seed.sql  005_healthcare_script_seed.sql  006_campaign_scripts_seed.sql  007_drop_caller_task_fields.sql  008_update_script_system_prompts.sql  010_add_audit_report_url.sql
Canard/services/api/scripts/: reevaluate_calls.py
Canard/services/api/tests/: conftest.py  test_agent.py  test_audio_features.py  test_evaluation.py  test_evaluation_integration.py  test_evaluation_scenarios.py  test_health.py  test_mistral.py  test_models.py  test_redaction.py  test_voice_pipeline.py  test_weave.py
(+117 files in other folders)
